# stm32l442-usb-example

./: Cargo.toml  README.md  flash.gdb
.cargo/: config
src/: main.rs
