[package]
name = "stm32l443"
version = "0.1.0"
authors = ["tolyan"]
edition = "2018"

[dependencies.defmt]
git = "https://github.com/knurling-rs/defmt"
branch = "main"

[dependencies]
embedded-hal = "0.2.4"
usb-device = "0.2.5"
usbd-serial = "0.1"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
cortex-m = "0.7.3"
cortex-m-rtic = { version = "0.5.5" }
stm32l4xx-hal = { version= "0.6.0", features = ["stm32l4x2", "rt"] }
stm32-usbd = { version = "0.6.0" }
